# rust-stuff

./: README.md
rust-tutorial-video1/: Cargo.toml
rust-tutorial-video1/src/: arrays.rs  cli.rs  conditionals.rs  draft.rs  enums.rs  functions.rs  loops.rs  main.rs  pointers.rs  print.rs  strings.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
simple-rust-gaming/: .gitignore  Cargo.toml  build.rs
simple-rust-gaming/res/sounds/: .gitignore
simple-rust-gaming/src/: config.rs  main.rs
simple-rust-gaming/src/engine/: basic_types.rs  element.rs  elements_handler.rs  keyboard_mover.rs  mod.rs  renderer.rs  sdl_handler.rs  sprite_renderer.rs  texture.rs
simple-rust-gaming/src/game/: bullet.rs  bullet_mover.rs  bullet_pool.rs  enemy.rs  mod.rs  player.rs  player_shooter.rs  resources.rs
