[package]
name = "simple-rust-gaming"
version = "0.1.0"
authors = ["josnelihurt <josnelihurt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

[dependencies.num]
version = "0.2"
default-features = false

[dependencies.sdl2]
    version = "0.32"
    default-features = false
    features = ["ttf","image","mixer"]