[package]
name = "simple-rust-gaming"
version = "0.1.0"
authors = ["josnelihurt <josnelihurt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
deferred = "1.1.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"

[dependencies.num]
    version = "0.2"
    default-features = false

[dependencies.sdl2]
    version = "0.32"
    default-features = false
    features = ["ttf","image","mixer"]